fix:  Improve responsiveness and layout alignment. Center buttons in aside, reduce spacing between divs, and enhance horizontal and vertical alignment for mobile devices

--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -58,6 +58,7 @@
     margin-left: 2rem;
 }
 .menu-steps p{
+    width: 90px;
     margin-bottom: 0;
     color: var(--white);
 }
@@ -70,9 +71,7 @@
 
 
 /* Apenas para depuração, remova depois */
-span, p, button {
-    border: 1px solid red;
-  }
+
   
 
 
@@ -119,22 +118,80 @@ span, p, button {
 /* responsividade pagina geral*/
 
 @media (max-width: 768px) {
-    #box-main {
-        flex-direction: column; /
-    }
 
-    .menu-steps {
-        width: 100%; 
-        min-height: 200px; 
+    .container-fluid {
+        flex-direction: column; 
+        
+    }
+    
+    #aside-mobile-style  {
+        display: flex !important;
+        flex-direction: row !important;
+        justify-content: space-evenly;
+        gap: 1px;
+        width: 100vw;
+        height: 25vh;
+        background-image: url("/assets/images/bg-sidebar-mobile.svg");
+        background-repeat: no-repeat;
+        background-size: contain;
+    }
+    #box-menu-1, #box-menu-2, #box-menu-3, #box-menu-4 {
+        display: flex;
+        flex-direction: column; 
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        width: auto;
+        margin: 0;
+        
+       
+    }
+    #box-menu-1 {
+        padding-left: 5rem;
+    }
+    #box-menu-4 {
+        padding-right: 5rem;
+    }
+    
+    .btn-person {
+        margin: 0 5px;
+        padding: 0;
+    }
+    
+    #aside-mobile-style  > span, p{
+        display: none;
+        margin: 0;
+        padding: 0;
+    }
+   
+    .btn-person {
+        width: 2.4rem;
+        height: 2.4rem;
+        border-radius: 50%;
+
     }
 
     .main-right {
-        width: 100%; 
-        margin-top: 1rem; 
+        background-color: var(--white);
+        border-radius: 10px;
+        width: 90%; 
+        position: absolute; 
+        top: 10rem;
+        left: 50%;
+        transform: translateX(-50%);
     }
-
+    .main-right .form-initial {
+        width: 90%;
+        margin: 0 auto;
+    }
     .main-right h1 {
         margin-top: 2rem; 
+        margin-left: 1.2rem;
+    }
+    .main-right #text-mobile {
+        display: flex;
+        margin-left: 1.2rem;
+        width: 80%;
     }
 }
 
